--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -15,3 +15,27 @@
 
 .pasos-a.color-acento-botones .pasos-a__circle
   font-size: 18px 
+.fa-hand-point-right
+  color: #3A277B
+
+.cajon.color-primario 
+  background-color: #7d6eb231
+
+.tarjeta.color-secundario
+  background-color: #aee6e64d
+/*TEMA 4*/
+.cajon.color-acento-contenido
+  background-color: #aee6e64d
+
+.tarjeta.color-primario
+  background-color: #3A277B
+
+.bloque-texto-a.color-primario 
+  background-color: #f6f6f6
+
+.tabs-a__tab
+  background-color: #e8e8e8
+
+.tarjeta.tarjeta--gris
+  background-color: #f6f6f6
+  border-radius: 0
