--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -3,7 +3,10 @@
 
 
 .tarjeta--boton 
-  background-color: none 
+  background-color: #f6f6f600 
+
+.tarjeta--boton.color-secundario:hover
+  background-color: #aee6e62c
 
 /*TEMA 2*/
 .cajon.color-secundario
@@ -35,7 +38,21 @@
 
 .tabs-a__tab
   background-color: #e8e8e8
+  
+
 
 .tarjeta.tarjeta--gris
   background-color: #f6f6f6
   border-radius: 0
+
+//Tabs gris redes sociales
+.tabs-b__tab
+  filter: opacity(0.5)
+
+.tabs-b__tab--active 
+  filter: opacity(1)
+
+p > a
+  color:#000
+  text-decoration: none
+  font-weight: bold
