--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -76,7 +76,7 @@ $color-btn-fondo: $color-acento-botones
 $color-btn-texto: $color-sistema-texto
 
 // Colores banner --------------------------------------
-$color-banner-fondo: $color-primario
+$color-banner-fondo: white
 $color-banner-text: $color-sistema-texto
 
 // Colores anexos
