--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -56,3 +56,25 @@ p > a
   color:#000
   text-decoration: none
   font-weight: bold
+
+//
+
+.banner-principal p, .banner-principal h1, .banner-principal h2, .banner-principal h3, .banner-principal h4, .banner-principal h5, .banner-principal h6 
+    color: #080808;
+
+.banner-principal .tarjeta 
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat
+
+.banner-principal .tarjeta 
+  img, svg 
+    display: block;
+    border-style: hidden;
+  figure, picture, img, svg 
+    margin: 0;
+    width: 75%;
+    max-width: 100%;
+
+.titulo-principal.color-secundario .titulo-principal__numero span 
+    color: #040404;
