--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -3,7 +3,7 @@
 
 
 .tarjeta--boton 
-  background-color: #f6f6f600 
+  background-color: #f6f6f60
 
 .tarjeta--boton.color-secundario:hover
   background-color: #aee6e634
@@ -57,6 +57,13 @@ p > a
   text-decoration: none
   font-weight: bold
 
+
+
+
+
+
+
+
 //
 
 .banner-principal p, .banner-principal h1, .banner-principal h2, .banner-principal h3, .banner-principal h4, .banner-principal h5, .banner-principal h6 
@@ -78,3 +85,135 @@ p > a
 
 .titulo-principal.color-secundario .titulo-principal__numero span 
     color: #040404;
+
+.img-t
+  width: auto
+  height: auto
+.img-a
+  display: block
+  margin: auto
+
+.caja3
+  background-color: #7D6EB2
+  margin-inline: -3.4rem
+  @media screen and (max-width: 992px)
+    margin-inline: -1.4rem
+.tarjeta--azul
+  background-color: #ffffff
+
+.slyder-a__btn--sigt, .slyder-a__btn--atrs 
+    width: 50px;
+    height: 50px;
+    background-color: #FFD947;
+    border-radius: 50%;
+    background-repeat: no-repeat;
+    background-size: 16px 24px;
+    background-position: center;
+    border: 1px solid #f7db14;
+    top: 50%;
+    z-index: 10000;
+    opacity: 0.7;
+    box-shadow: 0 0 0px 0px rgba(0, 0, 0, 0.3);
+    transition: opacity 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+    cursor: pointer;
+
+.slyder-a__bullets__item--active  
+    background-color: #FFD947;
+    border-color: #FFD947;
+    opacity: 1;
+
+.titulo-segundo:after 
+    content: '';
+    display: block;
+    height: 4px;
+    width: 140px;
+    border-left: solid 50px;
+    border-left-color: #26AAB7;
+    background-color: #e8e8e8;
+
+.px-3 
+    padding-right: 11rem !important;
+    padding-left: 2.5rem !important;
+
+.color-secundario.bg1
+  background: url('../assets/curso/tema2/img4.svg')
+  background-repeat: round;
+  border-radius: 15px
+
+.mov
+  position: relative;
+  left: -42%;
+  top: -5px;
+
+.tabs-b.color-acento-botones .tabs-b__tab--active 
+    border-top-color: #26AAB7 !important;
+
+.tabs-b__tab 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    background-color: #ffffff;
+    border-right: 2px solid #26AAB7;
+    border-bottom: 2px solid #AFAFAF;
+    cursor: pointer;
+
+.titulo-sexto.color-secundario 
+    border-left-color: #26AAB7;
+
+.titulo-sexto 
+    margin-bottom: 24px;
+    border-left: 7px solid;
+    padding: 5px 0 5px 15px;
+
+.fa-check-circle:before, .fa-circle-check:before 
+    content: "\f058";
+    color: #26AAB7
+
+
+.caja1
+  background-color: #26AAB7
+  border-radius: 15px
+
+.color-secundari
+  background-color: #AEE6E6
+
+.cajam
+  background-color: #7D6EB2 
+
+
+
+.color-primate
+  background-color: #E7F8F8
+  border-radius: 20px;
+
+.tabs-a__tab 
+    background-color: #AEE6E6;
+
+.mo
+  padding-left: 3.5rem;
+
+.tarjeta--azull
+    background-color: #D3EEF1 !important
+
+.acordion__accion__btn--a 
+    background-color: #FFD947;
+    box-shadow: 0px 3px 5px 0px rgba(17, 30, 97, 0.3);
+
+.bg11
+  background-color: #CFCBDD;
+  border-radius: 15px
+
+.bg2 
+    background: url(../assets/curso/tema4/ima25.png);
+    background-repeat: no-repeat;
+    border-radius: 15px;
+    background-position: right;
+    background-size: contain;
+
+.bg3
+    background: url(../assets/curso/tema4/ima26.png);
+    background-repeat: no-repeat;
+    border-radius: 18px;
+    background-position: center;
+    height: 400px
