--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -1,6 +1,38 @@
 .banner-interno__titulo__icono i
   color: #fff !important
+.banner-principal-decorativo
+  &-1
+    animation: float1 3.5s ease-in-out infinite alternate
+    position: absolute
+    top: 45%
+    right: 90%
+  &-2
+    animation: float1 2.8s ease-in-out infinite alternate
+    position: absolute
+    top: 23%
+    right: 48%
+  &-3
+    animation: float1 3.5s ease-in-out infinite alternate
+    position: absolute
+    top: 39%
+    right: 32%
+  &-4
+    animation: float1 3.5s ease-in-out infinite alternate
+    position: absolute
+    top: 73%
+    right: 80%
+  &-5
+    animation: float1 3.5s ease-in-out infinite alternate
+    position: absolute
+    top: 73%
+    right: 35%
 
+@keyframes float1
+  0%
+    transform: translateY(20px)
+
+  100%
+    transform: translateY(0px)
 
 .tarjeta--boton 
   background-color: #f6f6f60
@@ -38,12 +70,6 @@
 
 .tabs-a__tab
   background-color: #e8e8e8
-  
-
-
-.tarjeta.tarjeta--gris
-  background-color: #f6f6f6
-  border-radius: 0
 
 //Tabs gris redes sociales
 .tabs-b__tab
@@ -80,7 +106,7 @@ p > a
     border-style: hidden;
   figure, picture, img, svg 
     margin: 0;
-    width: 75%;
+    width: 80%;
     max-width: 100%;
 
 .titulo-principal.color-secundario .titulo-principal__numero span 
@@ -135,7 +161,7 @@ p > a
     padding-right: 11rem !important;
     padding-left: 2.5rem !important;
 
-.color-secundario.bg1
+.bg1
   background: url('../assets/curso/tema2/img4.svg')
   background-repeat: round;
   border-radius: 15px
@@ -217,3 +243,60 @@ p > a
     border-radius: 18px;
     background-position: center;
     height: 400px
+
+.br-cus
+  border-right: 3px solid #000
+  padding-right: 20px
+  height: 80px
+  background-position: center;
+
+.tarjeta--verde
+  background: url('../assets/curso/tema4/img5.png')
+  background-repeat: round;
+  border-radius: 15px
+
+.bg15
+  background: url('../assets/curso/tema4/ima29.png')
+  background-repeat: round;
+  border-radius: 15px
+
+.slyder-f__btn
+    width: 50px;
+    height: 50px;
+    background-color: $color-acento-botones;
+    border-radius: 50%;
+    position: sticky;
+    top: 50%;
+.slyder-f__btn i 
+    font-size: 2rem !important
+.slyder-f__btn.pe-3
+  margin-right: 1rem;
+  padding-right: 0 !important;
+.slyder-f__btn.ps-3
+  margin-left: 1rem;
+  padding-left: 0 !important;
+
+.bg26
+  background-color: #F9F7F4
+
+.tabs-c.color-primario .tabs-c__tab--active 
+    border-bottom-color: #5FB8C1 !important;
+
+.tabs-c__tab--active 
+    border-bottom: 6px solid !important;
+
+
+.tabs-c.color-primario .tabs-c__tab--active:before 
+    border-top-color: #5FB8C1 ;
+
+.tabs-c__tab--active:before 
+    width: 0;
+    height: 0;
+    border-left: 14px solid transparent;
+    border-right: 14px solid transparent;
+    border-top: 13px solid;
+    left: 50%;
+    top: calc(100% + 6px);
+
+.tabs-c__header 
+    margin-bottom: 1px;
