--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -1,31 +1,33 @@
 .banner-interno__titulo__icono i
-  color: #fff !important
+  color: #AFAFAF!important
+
 .banner-principal-decorativo
   &-1
     animation: float1 3.5s ease-in-out infinite alternate
     position: absolute
-    top: 45%
-    right: 90%
+    top: 53%
+    right: 92%
   &-2
     animation: float1 2.8s ease-in-out infinite alternate
     position: absolute
     top: 23%
-    right: 48%
+    right: 43%
   &-3
     animation: float1 3.5s ease-in-out infinite alternate
     position: absolute
-    top: 39%
-    right: 32%
+    top: 40%
+    right: 15%
   &-4
     animation: float1 3.5s ease-in-out infinite alternate
     position: absolute
-    top: 73%
+    top: 77%
     right: 80%
   &-5
     animation: float1 3.5s ease-in-out infinite alternate
     position: absolute
-    top: 73%
-    right: 35%
+    top: 72%
+    right: 21%
+
 
 @keyframes float1
   0%
@@ -34,63 +36,8 @@
   100%
     transform: translateY(0px)
 
-.tarjeta--boton 
-  background-color: #f6f6f60
-
-.tarjeta--boton.color-secundario:hover
-  background-color: #aee6e634
-
-/*TEMA 2*/
-.cajon.color-secundario
-  background-color: #aee6e638
-
-.pasos-a__circle
-  width: 60px
-  height: 60px
-
-.pasos-a.color-acento-botones .pasos-a__circle
-  font-size: 18px 
-.fa-hand-point-right
-  color: #3A277B
-
-.cajon.color-primario 
-  background-color: #7d6eb231
-
-.tarjeta.color-secundario
-  background-color: #aee6e64d
-/*TEMA 4*/
-.cajon.color-acento-contenido
-  background-color: #aee6e64d
-
-.tarjeta.color-primario
-  background-color: #3A277B
-
-.bloque-texto-a.color-primario 
-  background-color: #f6f6f6
-
-.tabs-a__tab
-  background-color: #e8e8e8
-
-//Tabs gris redes sociales
-.tabs-b__tab
-  filter: opacity(0.5)
-
-.tabs-b__tab--active 
-  filter: opacity(1)
-
-p > a
-  color:#000
-  text-decoration: none
-  font-weight: bold
 
 
-
-
-
-
-
-
-//
 
 .banner-principal p, .banner-principal h1, .banner-principal h2, .banner-principal h3, .banner-principal h4, .banner-principal h5, .banner-principal h6 
     color: #080808;
@@ -127,62 +74,57 @@ p > a
 .tarjeta--azul
   background-color: #ffffff
 
-.slyder-a__btn--sigt, .slyder-a__btn--atrs 
-    width: 50px;
-    height: 50px;
-    background-color: #FFD947;
-    border-radius: 50%;
-    background-repeat: no-repeat;
-    background-size: 16px 24px;
-    background-position: center;
-    border: 1px solid #f7db14;
-    top: 50%;
-    z-index: 10000;
-    opacity: 0.7;
-    box-shadow: 0 0 0px 0px rgba(0, 0, 0, 0.3);
-    transition: opacity 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
-    cursor: pointer;
-
-.slyder-a__bullets__item--active  
-    background-color: #FFD947;
-    border-color: #FFD947;
-    opacity: 1;
 
 .titulo-segundo:after 
-    content: '';
-    display: block;
-    height: 4px;
-    width: 140px;
-    border-left: solid 50px;
-    border-left-color: #26AAB7;
-    background-color: #e8e8e8;
+    content: ''
+    display: block
+    height: 4px
+    width: 140px
+    border-left: solid 50px
+    border-left-color: #26AAB7
+    background-color: #e8e8e8
 
-.px-3 
-    padding-right: 11rem !important;
-    padding-left: 2.5rem !important;
 
-.bg1
-  background: url('../assets/curso/tema2/img4.svg')
-  background-repeat: round;
-  border-radius: 15px
+
+
+
+.linea-tiempo-d.color-secundario.bguu .linea-tiempo-d__item--selected .linea-tiempo-d__item__content 
+    background: url('../assets/curso/tema2/img4.png')
+    background-size: 100% 100%
+    background-repeat: no-repeat
+    background-position: cover
+    padding: 1rem
+
+.linea-tiempo-d.color-secundario .linea-tiempo-d__item--selected .linea-tiempo-d__item__number
+    background-color: #AEE6E6
+    color: black
+
 
 .mov
-  position: relative;
-  left: -42%;
-  top: -5px;
+  position: relative
+  left: -40%
+  top: -5px
 
 .tabs-b.color-acento-botones .tabs-b__tab--active 
-    border-top-color: #26AAB7 !important;
+    border-top-color: #26AAB7 !important
+    background-color: #ffffff
+    filter: none
+
 
 .tabs-b__tab 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
-    background-color: #ffffff;
-    border-right: 2px solid #26AAB7;
-    border-bottom: 2px solid #AFAFAF;
-    cursor: pointer;
+    display: flex
+    flex-direction: column
+    align-items: center
+    padding: 20px
+    background-color: #F3FCFC
+    border-right: 3px solid #26AAB7
+    border-bottom: 0px solid #AFAFAF
+    cursor: pointer
+    filter: grayscale(1)
+
+
+.not
+    overflow-wrap: break-word;
 
 .titulo-sexto.color-secundario 
     border-left-color: #26AAB7;
@@ -211,44 +153,43 @@ p > a
 
 .color-primate
   background-color: #E7F8F8
-  border-radius: 20px;
+  border-radius: 20px
 
 .tabs-a__tab 
-    background-color: #AEE6E6;
+    background-color: #AEE6E6
 
 .mo
-  padding-left: 3.5rem;
+  padding-left: 3.5rem
 
-.tarjeta--azull
-    background-color: #D3EEF1 !important
 
-.acordion__accion__btn--a 
-    background-color: #FFD947;
-    box-shadow: 0px 3px 5px 0px rgba(17, 30, 97, 0.3);
+
+
+
+.acordion__accion__btn--a
+  background-color: #FFDC39
+  box-shadow: 0px 0px 7px 2px rgba(0,0,0,.3)
+.acordion .tarjeta--azull
+  background-color: #D3EEF1
+.acordion .tarjeta.tarjeta--azull.acordion__activo
+  background-color: #F3F0EA
+
+
+
+
 
 .bg11
   background-color: #CFCBDD;
   border-radius: 15px
 
 .bg2 
-    background: url(../assets/curso/tema4/ima25.png);
+    background: url(../assets/curso/tema4/ima25.png)
+    background-size: cover
     background-repeat: no-repeat;
     border-radius: 15px;
-    background-position: right;
-    background-size: contain;
+    background-position: 100%
 
-.bg3
-    background: url(../assets/curso/tema4/ima26.png);
-    background-repeat: no-repeat;
-    border-radius: 18px;
-    background-position: center;
-    height: 400px
 
-.br-cus
-  border-right: 3px solid #000
-  padding-right: 20px
-  height: 80px
-  background-position: center;
+
 
 .tarjeta--verde
   background: url('../assets/curso/tema4/img5.png')
@@ -260,43 +201,193 @@ p > a
   background-repeat: round;
   border-radius: 15px
 
-.slyder-f__btn
-    width: 50px;
-    height: 50px;
-    background-color: $color-acento-botones;
-    border-radius: 50%;
-    position: sticky;
-    top: 50%;
-.slyder-f__btn i 
-    font-size: 2rem !important
-.slyder-f__btn.pe-3
-  margin-right: 1rem;
-  padding-right: 0 !important;
-.slyder-f__btn.ps-3
-  margin-left: 1rem;
-  padding-left: 0 !important;
+.bg155
+  background: url('../assets/curso/tema4/ima26.png')
+  background-size: 100% 100%
+  background-repeat: no-repeat
+  background-position: center
+
+
+
+
 
 .bg26
   background-color: #F9F7F4
 
 .tabs-c.color-primario .tabs-c__tab--active 
-    border-bottom-color: #5FB8C1 !important;
+    background-color: #ffffff
+    font-weight: 900
+
+
+.tabs-c.color-primario .tabs-c__tab--active 
+    border-bottom-color: #5FB8C1 !important
 
 .tabs-c__tab--active 
-    border-bottom: 6px solid !important;
+    border-bottom: 6px solid !important
 
 
 .tabs-c.color-primario .tabs-c__tab--active:before 
-    border-top-color: #5FB8C1 ;
+    border-top-color: #5FB8C1 
 
 .tabs-c__tab--active:before 
-    width: 0;
-    height: 0;
-    border-left: 14px solid transparent;
-    border-right: 14px solid transparent;
-    border-top: 13px solid;
-    left: 50%;
-    top: calc(100% + 6px);
+    width: 0
+    height: 0
+    border-left: 14px solid transparent
+    border-right: 14px solid transparent
+    border-top: 13px solid
+    left: 50%
+    top: calc(100% + 6px)
 
 .tabs-c__header 
-    margin-bottom: 1px;
+    margin-bottom: 1px
+
+.tabs-c__tab 
+    border-bottom: 6px solid #e8e8e8
+    line-height: 1.2
+    text-align: center
+    display: flex
+    align-items: center
+    justify-content: center
+    position: relative
+
+
+
+
+
+
+hr:not([size]) 
+    height: 0px
+
+
+.slyder-a__bullets__item 
+    background-color: #ffd947
+    opacity: .4
+
+.slyder-a__bullets__item--active 
+    background-color: #ffd947
+    border-color: #ffd947
+    opacity: 1 !important
+
+@media (max-width: 768px) 
+    .slyder-a__bullets__item 
+        width: 11px
+        height: 11px
+        margin: 0px 0.5px
+
+@media (max-width: 768px)  
+  .slyder-a__btn--sigt, .slyder-a__btn--atrs
+    width: 30px
+    height: 30px
+
+.slyder-a__btn--sigt, .slyder-a__btn--atrs 
+    width: 50px;
+    height: 50px;
+    background-color: #FFD947;
+    border-radius: 50%;
+    background-repeat: no-repeat;
+    background-size: 16px 24px;
+    background-position: center;
+    border: 1px solid #D8ECFF;
+    z-index: 10000;
+    opacity: 0.7;
+    box-shadow: 0 0 0px 0px rgba(0, 0, 0, 0.3);
+    transition: opacity 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+    cursor: pointer;
+  
+.slyder-a__bullets__item--active 
+    background-color: #FFD947;
+    border-color: #FFD947;
+    opacity: 1
+
+
+.fa-chevron-right:before 
+    content: url('../assets/curso/tema4/checkk.svg')
+
+.fa-chevron-left:before 
+    content: url('../assets/curso/tema4/check.svg')
+
+
+
+.crd
+  &.brd--rad
+    border-radius: 20px 
+  &.crd--grayGrad
+    padding: 2rem
+    height: 100%
+    background-color: #CAC4E0
+    border-radius: 15px    
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23)
+    &:hover      
+      background-color: #9E93C5
+      h4, p
+        color: black
+
+
+
+
+
+.title-card-acento-contenido
+  background-color: $color-acento-contenido
+  padding-top: 7px
+  padding-bottom: 7px
+  color: #FFF
+  padding-left: 0.5rem!important
+  padding-right: 0.2rem!important
+  font-weight: bold
+
+.title-card-comp
+  padding-top: 7px
+  padding-bottom: 7px
+  padding-right: 0.2rem!important
+  font-weight: bold
+
+
+.cajon.color-secundario.bgtt
+    background-color: #AEE6E6
+
+.br-cus
+  border-right: 3px solid #000
+  padding-right: 20px
+  height: 100px
+
+
+@media (max-width: 767px) 
+            .icono 
+                display: none
+
+
+.tarjeta-avatar.sin 
+    height: 100%
+    position: relative
+    padding-top: 0px
+
+
+.p-5 
+    padding: 2.5rem !important
+
+.anexo 
+    display: block
+    background-color: #f3f9ff
+    position: relative
+    margin-left: 15px
+    padding: 10px
+    padding-left: 42px
+    white-space: normal
+    text-align: left
+    border-radius: 10px
+
+
+
+.tarjeta-avatar > img 
+    position: absolute
+    left: 50%
+    top: -65px
+    transform: translateX(-50%)
+    display: block
+    width: 250px
+    margin: 15px auto
+
+.mb-5.ava
+    margin-bottom: 5rem !important
+
+
