--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -59,6 +59,11 @@
 .titulo-principal.color-secundario .titulo-principal__numero span 
     color: #040404;
 
+
+.banner-principal__row 
+    justify-content: space-around
+
+
 .img-t
   width: auto
   height: auto
