--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -94,12 +94,7 @@
 
 
 .linea-tiempo-d.color-secundario.bguu .linea-tiempo-d__item--selected .linea-tiempo-d__item__content 
-    background: url('../assets/curso/tema2/img4.png')
-    background-size: 100% 100%
-    background-repeat: no-repeat
-    background-position: cover
-    padding: 1rem
-
+    background-color:  #AEE6E6
 .linea-tiempo-d.color-secundario .linea-tiempo-d__item--selected .linea-tiempo-d__item__number
     background-color: #AEE6E6
     color: black
