--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -124,18 +124,15 @@
 
 
 .not
-    overflow-wrap: break-word;
+    overflow-wrap: break-word
 
-.titulo-sexto.color-secundario 
-    border-left-color: #26AAB7;
 
-.titulo-sexto 
-    margin-bottom: 24px;
-    border-left: 7px solid;
-    padding: 5px 0 5px 15px;
+.titulo-sexto.color-secundario
+    border-left: 10px solid #26AAB7
+    padding: 3px 0px 3px 10px
 
 .fa-check-circle:before, .fa-circle-check:before 
-    content: "\f058";
+    content: "\f058"
     color: #26AAB7
 
 
